2010-02-12  Jeffrey Stedfast  <fejj@novell.com>

	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs: Implemented
	IScrollInfo interfaces.

	* Controls/Src/ScrollViewer/ScrollViewer.cs: Added missing method
	signature.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* Controls/Src/ScrollViewer/ScrollContentPresenter.cs:
	  Implement support for custom IScrollInfos. This should allow
	  VirtualizingStackPanel to work properly.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs:
	* Controls/Src/ToolTip/ToolTipService.cs:
	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* RuntimeControls/SilverlightControls/CheckBox.cs: Fix compiler warnings.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: Add the missing 'readonly'
	  to the DP field. 

2010-01-27  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: Land initial support for
	  multi-selection in ListBox. moon-units will follow...
	  eventually.

2010-01-20  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs: Whenever the
	  values for HorizontalScrollBarVisibility or
	  VerticalScrollbarVisibility change we need to update the
	  computed value which the Scrollbars are databound to.

2010-01-14  Mario Carrion  <mcarrion@novell.com>

	* SDKControls/Extended/Src/Automation/CalendarAutomationPeer.cs: Fixes
	exception when raising UIA event.

	r: alan

2009-12-21  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: GetContainerItem should
	  return UIElement instead of ListBoxItem so that the method
	  can be used with ItemsControl.

2009-12-17  Alan McGovern  <amcgovern@novell.com>

	* RuntimeControls/SilverlightControls/CheckBox.cs:
	* RuntimeControls/SilverlightControls/RadioButton.cs: Comment
	  out the SL3 visual states for now so the DRTs keep passing.

2009-12-16  Jeffrey Stedfast  <fejj@novell.com>
